--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    compile 'org.apache.commons:commons-lang3:3.10'
 }
 
 run {
     standardInput = System.in
 }
+
